--- a/views/aiml_url_form.html
+++ b/views/aiml_url_form.html
@@ -173,7 +173,7 @@
       messageDiv.textContent = 'Inserting URL...';
       
       try {
-        const response = await fetch('http://localhost:9003/api/addAimlUrl', {
+        const response = await fetch('https://mediahub.sportz.io/api/addAimlUrl', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
